# bytecode

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  COPYING  MANIFEST.in  README.rst  TODO.rst  bytecode.py  codecov.yml  peephole_opt.py  pyproject.toml  readthedocs.yaml  setup.py  test_bytecode.py  test_peephole_opt.py  test_utils.py  tox.ini
.github/workflows/: benchmarks.yml  ci.yml  cis.yml  docs.yml  frameworks.yml  release.yml
bytecode/: __init__.py  blocks.py  bytecode.py  cfg.py  compat.py  concrete.py  flags.py  instr.py  peephole_opt.py
bytecode/tests/: __init__.py  long_lines_example.py  test_blocks.py  test_bytecode.py  test_cfg.py  test_code.py  test_concrete.py  test_flags.py  test_instr.py  test_misc.py  test_peephole_opt.py  util_annotation.py
doc/: Makefile  api.rst  blocks.rst  byteplay_codetransformer.rst  cfg.rst  changelog.rst  conf.py  index.rst  make.bat  peephole.rst  requirements.txt  todo.rst  usage.rst
scripts/: benchmark.py
scripts/frameworks/boto3/: run.sh  setup.sh
src/bytecode/: __init__.py  bytecode.py  cfg.py  concrete.pxd  concrete.py  flags.py  instr.pxd  instr.py  instr.pyi  peephole_opt.py  utils.py
tests/: __init__.py  cell_free_vars_cases.py  conftest.py  exception_handling_cases.py  test_bench_roundtrip.py  test_bytecode.py  test_cfg.py  test_code.py  test_concrete.py  test_flags.py  test_instr.py  test_misc.py  test_peephole_opt.py
tests/frameworks/: function.py  module.py  sitecustomize.py
